Bug 272243 - song title, artist, etc. not displayed when streaming shoutcast radio stations
Summary: song title, artist, etc. not displayed when streaming shoutcast radio stations
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-gstreamer
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.5.1
Platform: Ubuntu Linux
: HI normal
Target Milestone: 4.5.1
Assignee: Harald Sitter
URL:
Keywords:
: 272929 276236 285448 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-02 15:05 UTC by Robert Rogers
Modified: 2012-05-17 17:59 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Rogers 2011-05-02 15:05:37 UTC
Version:           2.4.0 (using KDE 4.6.2) 
OS:                Linux

after upgrading from kubuntu 10.10 to 11.04 amarok no longer displays song info. where before title, artist and album were displayed now the words "Streaming Data" appear s for all three entries. if lyrics are available they are not displayed. Wikipedia is not functional as well.

Reproducible: Always

Steps to Reproduce:
restart amarok, reboot, searched for updates.

Actual Results:  
same results

Expected Results:  
it should perform properly as it did before upgrades
Comment 1 Myriam Schweingruber 2011-05-03 16:39:53 UTC
Shoutcast Streams is a 3rd-party script, please report this to the script author on http://www.kde-apps.org
Comment 2 Edward Karavakis 2011-05-13 08:58:33 UTC
Trying out 2.4.1 on Ubuntu Natty. Bug is still there and it is extremely annoying...
Comment 3 Myriam Schweingruber 2011-05-14 10:36:40 UTC
Please see comment #1, there is nothing we can do about that, please report this to the script author.
Comment 4 albert 2011-05-20 13:11:32 UTC
This bug is not related to the Shoutcast script. Amarok behaves as described also if you add a stream to the playlist, for example the following one:
http://tuner.classical102.com:80
It's rather connected to the GStreamer Phonon backend, because if you use the VLC backend, all comes back working.
Comment 5 Robert Rogers 2011-05-20 14:25:30 UTC
Albert,

Excellent! Thank you so much. I installed the vlc backend and 
uninstalled the gstreamer backend and now I have my song title and 
artist names.

Thanks again,
Robert

On 5/20/2011 6:12 AM, albert wrote:
> https://bugs.kde.org/show_bug.cgi?id=272243
>
>
> albert<alberthilbert@gmail.com>  changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |alberthilbert@gmail.com
>
>
>
>
> --- Comment #4 from albert<alberthilbert gmail com>   2011-05-20 13:11:32 ---
> This bug is not related to the Shoutcast script. Amarok behaves as described
> also if you add a stream to the playlist, for example the following one:
> http://tuner.classical102.com:80
> It's rather connected to the GStreamer Phonon backend, because if you use the
> VLC backend, all comes back working.
>
Comment 6 Myriam Schweingruber 2011-05-21 22:03:07 UTC
Good to know, reassigning to Phonon-backend-gstreamer then
Comment 7 Myriam Schweingruber 2011-07-18 08:40:08 UTC
*** Bug 276236 has been marked as a duplicate of this bug. ***
Comment 8 Torrie Fischer 2011-09-19 12:32:54 UTC
Think you can test this with the latest pgst 4.5.90? Lots of things were fixed in that release.
Comment 9 Torrie Fischer 2011-09-19 12:33:58 UTC
Forgot to update status, pardon the noise.
Comment 10 Myriam Schweingruber 2011-09-19 20:37:13 UTC
*** Bug 272929 has been marked as a duplicate of this bug. ***
Comment 11 Emilio 2011-09-19 21:01:50 UTC
*** This bug has been confirmed by popular vote. ***
Comment 12 Robert Rogers 2011-09-19 23:54:47 UTC
I am now running Fedora 15, Gnome 3.  Nothing has changed with Amarok, I 
still have to use the vlc backend to get song titles and wikipedia info, 
etc. How do I get the latest pgst 4.5.90 in order to test it? Thanks for 
your help, Robert Rogers.

On 9/19/2011 7:32 AM, Trever Fischer wrote:
> https://bugs.kde.org/show_bug.cgi?id=272243
>
>
> Trever Fischer<tdfischer@fedoraproject.org>  changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |tdfischer@fedoraproject.org
>
>
>
>
> --- Comment #8 from Trever Fischer<tdfischer fedoraproject org>   2011-09-19 12:32:54 ---
> Think you can test this with the latest pgst 4.5.90? Lots of things were fixed
> in that release.
>
Comment 13 Elbin Pallimalil 2011-09-20 04:47:05 UTC
Hey Trever,

This bug is not fixed in GIT and there is a patch waiting for your review. https://git.reviewboard.kde.org/r/101595/.
Comment 14 Myriam Schweingruber 2011-11-02 09:15:39 UTC
*** Bug 285448 has been marked as a duplicate of this bug. ***
Comment 15 Myriam Schweingruber 2011-11-02 09:18:52 UTC
Reminder: could some of you test with the latest Phonon-backend-gstreamer master branch?
Comment 16 Marco Cimmino 2011-11-02 09:57:47 UTC
(In reply to comment #14)
> *** Bug 285448 has been marked as a duplicate of this bug. ***

To not that my problem is a little different:
I DO get the info, those are just overwritten if I try to play the stream while offline.
Not sure the two issues are related.
Comment 17 Robert Rogers 2011-11-02 11:37:39 UTC
Tested in Amarok Version 2.4.3 using KDE 4.6.5 on an HP G60 laptop 
running Fedora 15, Gnome 3. Switched from phonon vlc backend to phonon 
gstreamer backend 4.5.1. When playing Shoutcast streams song title is 
displayed as "Streaming Data" or "New Age World", artist is displayed as 
"http://www.skyfm/newage/", album displayed as "New Age-SKY.FM-soothing 
sounds of new age and world music!". Equalizer is enabled when using the 
gstreamer backend. Switching back to vlc backend shows song title and 
artist correctly but does not support the equalizer. I hope that this is 
helpful.

Thank you, Robert Rogers


On 11/2/2011 4:47 AM, Myriam Schweingruber wrote:
> https://bugs.kde.org/show_bug.cgi?id=272243
>
>
> Myriam Schweingruber<myriam@kde.org>  changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Version|4.5.0                       |4.5.1
>
>
>
>
Comment 18 David Sveningsson 2012-01-08 11:56:20 UTC
Using amarok-2.6.0, phonon-4.6.0 and phonon-gstreamer-4.5.1 "Streaming Data" is still shown. Using another backend (like vlc) works but I would prefer gstreamer over vlc.
Comment 19 David Sveningsson 2012-01-08 12:02:49 UTC
(In reply to comment #15)
> Reminder: could some of you test with the latest Phonon-backend-gstreamer
> master branch?

I just tried building from git sources but made no difference.
Comment 20 Myriam Schweingruber 2012-01-09 00:49:45 UTC
(In reply to comment #18)
> Using amarok-2.6.0, phonon-4.6.0 and phonon-gstreamer-4.5.1 "Streaming Data" is
> still shown. Using another backend (like vlc) works but I would prefer
> gstreamer over vlc.

There is no such thing as Amarok 2.6.0, I guess you mean 2.5, right?
Comment 21 David Sveningsson 2012-01-09 01:03:25 UTC
(In reply to comment #20)
> (In reply to comment #18)
> > Using amarok-2.6.0, phonon-4.6.0 and phonon-gstreamer-4.5.1 "Streaming Data" is
> > still shown. Using another backend (like vlc) works but I would prefer
> > gstreamer over vlc.
> 
> There is no such thing as Amarok 2.6.0, I guess you mean 2.5, right?

Yes, sorry about that, 2.5
Comment 22 Elbin Pallimalil 2012-01-15 12:08:19 UTC
To people who can try out GIT version of phonon-gstreamer, can you try this patch and see if you get the song info.
https://git.reviewboard.kde.org/r/101595/

If the patch works can you post here or on the review board. I am just trying to get the developers to fix this bug, but the patch has been ignored for more than 5 months now.
Comment 23 Octavian Petre 2012-03-14 11:48:09 UTC
On Gentoo 
media-libs/phonon-gstreamer-4.6.0 and 
media-libs/phonon-4.6.0-r1
fix the issue.

The older (and stable) versions were buggy: phonon-gstreamer-4.5.0  and phonon-4.5.1-r1
Comment 24 Octavian Petre 2012-03-14 12:14:21 UTC
I was too quick. That's NOT correct. The data appears at the first run of amarok, and is never updated.

(In reply to comment #23)
> On Gentoo 
> media-libs/phonon-gstreamer-4.6.0 and 
> media-libs/phonon-4.6.0-r1
> fix the issue.
> 
> The older (and stable) versions were buggy: phonon-gstreamer-4.5.0  and
> phonon-4.5.1-r1
Comment 25 Octavian Petre 2012-03-14 12:54:24 UTC
By applying the patch at https://git.reviewboard.kde.org/r/101595/ against 4.6.0, the data is updated at every song change.
Comment 26 Martin Benz 2012-04-01 07:44:53 UTC
Phonon-Xine removed because it's not maintained, if something with phonon-gstreamer is not working forcing them to use phonon-vlc... PLEASE PUSH THIS WORKING SOLUTION TO THE SOURCES! Thanks!
Comment 27 Myriam Schweingruber 2012-04-01 18:28:33 UTC
Setting status correctly.
Comment 28 Torrie Fischer 2012-05-16 17:55:29 UTC
Git commit c83093b7b57e3427878de12db905471e6b63cc6f by Trever Fischer, on behalf of Elbin Pallimalil.
Committed on 16/05/2012 at 19:54.
Pushed by tdfischer into branch 'master'.

Fix metadata emission for http urls.

REVIEWBOARD:101595
FIXED-IN:4.6.1

M  +11   -10   gstreamer/pipeline.cpp
M  +1    -0    gstreamer/pipeline.h

http://commits.kde.org/phonon-gstreamer/c83093b7b57e3427878de12db905471e6b63cc6f
Comment 29 Martin Benz 2012-05-17 05:07:49 UTC
Installed svn version on my gentoo box, seems to be working now. Thanks! :-)
Comment 30 Torrie Fischer 2012-05-17 17:59:53 UTC
Git commit ef4fc39dda56e7c37353771657ddee451f469eb1 by Trever Fischer, on behalf of Elbin Pallimalil.
Committed on 16/05/2012 at 19:54.
Pushed by tdfischer into branch '4.6'.

Fix metadata emission for http urls.

REVIEWBOARD:101595
FIXED-IN:4.6.1

Conflicts:

	gstreamer/pipeline.cpp

M  +11   -5    gstreamer/pipeline.cpp
M  +1    -0    gstreamer/pipeline.h

http://commits.kde.org/phonon-gstreamer/ef4fc39dda56e7c37353771657ddee451f469eb1