Fix metadata emission for http urls.

REVIEWBOARD:101595
BUG:272243
FIXED-IN:4.6.1

Conflicts:

	gstreamer/pipeline.cpp